--- a/product_article.html
+++ b/product_article.html
@@ -35,7 +35,6 @@
         body {
             margin: .5rem
         }
-
         p {
             font-size: 1.4rem;
             line-height: 1.8rem
@@ -72,7 +71,7 @@
 
         .header-flex button {
             position: absolute;
-            top: 2.6rem;
+            top: 2rem;
             right: .5rem;
             width: 1.6rem;
             height: 1.2rem;
@@ -122,9 +121,6 @@
         }
 
         /* banner */
-        .banner-content {
-            margin-top: 5rem;
-        }
 
         /* 公共底部 */
         footer {
@@ -188,6 +184,15 @@
         }
         span.cgreen {
     color: #00cc99
+}
+span.cgreent {
+    background-color: #00cc99;
+    display: block;
+    font-size: 16px;
+    color: #fff;
+    text-align: center;
+    margin-bottom: 5px;
+    border-radius: 5px;
 }
     
     .fir {
@@ -253,6 +258,7 @@
     border: 1px solid #00cc99;
     text-align: center
 }
+
 
 
 
@@ -371,12 +377,6 @@
 <!-- /header -->
 <div class="bggrey">产品中心</div>
     <!--图片组件-->
-    <div class="banner-content">
-        <mip-carousel layout="responsive" width="530" height="187" indicator buttonController autoplay>
-            <mip-img src="img/product/banner.jpg" alt="banner"></mip-img>
-            <mip-img src="img/product/banner.jpg" alt="banner"></mip-img>
-        </mip-carousel>
-    </div>
 
 
     <div class="fir">
@@ -390,9 +390,9 @@
                             立式辊磨机(中速磨煤机、矿渣立磨)
                     </div>
                     <div class="content">
-                        <p><span class="cgreen">产品简介：</span>LM立式辊磨机是成熟的立磨技术、国外成功经验和我公司技术创新升级完美结合的一款高效节能型磨机设备。它集破碎、干燥、粉磨、分级、输送于一体，可广泛应用于水泥、电力、冶金、化工、非金属矿等行业，并专注于非金属矿、煤粉和矿渣三大领域。</p> 
-                        <p><span class="cgreen">应用范围：</span>砂石料场、混凝土搅拌站、干粉砂浆、电厂脱硫、石英砂等</p>
-                        <p><span class="cgreen">物&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;料：</span>河卵石、花岗岩、玄武岩、石英石、铁矿石、辉绿岩、石灰石、方解石、白云石、重晶石、滑石、石膏、膨润土等。</p>
+                        <p><span class="cgreent">产品简介</span>LM立式辊磨机是成熟的立磨技术、国外成功经验和我公司技术创新升级完美结合的一款高效节能型磨机设备。它集破碎、干燥、粉磨、分级、输送于一体，可广泛应用于水泥、电力、冶金、化工、非金属矿等行业，并专注于非金属矿、煤粉和矿渣三大领域。</p> 
+                        <p><span class="cgreent">应用范围</span>砂石料场、混凝土搅拌站、干粉砂浆、电厂脱硫、石英砂等</p>
+                        <p><span class="cgreent">物&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;料</span>河卵石、花岗岩、玄武岩、石英石、铁矿石、辉绿岩、石灰石、方解石、白云石、重晶石、滑石、石膏、膨润土等。</p>
                     </div>
                     <div class="lne-big">
                         <a href=""><div class="zixun1">
