--- a/index.html
+++ b/index.html
@@ -190,6 +190,7 @@
             text-align: center;
             font-size: 16px;
             line-height: 25px;
+            height: 50px;
         }
 
         .item-content p {
