'左右移动问题'

--- a/product.html
+++ b/product.html
@@ -87,6 +87,9 @@
             display: block;
             background: #fff
         }
+        body {
+            margin: .5rem
+        }
 
         .header-flex button span {
             position: absolute;
